// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`plugin allows customizing object and property names 1`] = `
"if (module.hot) {
  shouldBeKept;
}"
`;

exports[`plugin combines if-clauses surrounding HMR test if-statements 1`] = `
"if (module.notHot) {
  shouldBeKept;
} else {
    shouldAlsoBeKept;
  }"
`;

exports[`plugin extracts else-if-statements following HMR test if-clauses 1`] = `
"if (module.notHot) {
  shouldBeKept;
} else {
  shouldAlsoBeKept;
}"
`;

exports[`plugin extracts else-statements following HMR test if-clauses 1`] = `
"{
  shouldBeKept;
}"
`;

exports[`plugin ignores local variable bindings 1`] = `
"const module = { hot: true };

if (module.hot) {
  shouldBeKept;
}"
`;

exports[`plugin ignores negated HMR tests 1`] = `
"if (!module.hot) {
  shouldBeKept;
}"
`;

exports[`plugin ignores other objects 1`] = `
"if (notModule.hot) {
  shouldBeKept;
}"
`;

exports[`plugin ignores other properties of the HMR object 1`] = `
"if (module.notHot) {
  shouldBeKept;
}"
`;

exports[`plugin removes standalone HMR test if-clauses 1`] = `
"before;

after;"
`;
